; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/protocols/mqtt/ssl/main/extr_app_main.c_send_binary.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/protocols/mqtt/ssl/main/extr_app_main.c_send_binary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@SPI_FLASH_MMAP_DATA = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"/topic/binary\00", align 1
@TAG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [27 x i8] c"binary sent with msg_id=%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @send_binary to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @send_binary(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %7 = call %struct.TYPE_4__* (...) @esp_ota_get_running_partition()
  store %struct.TYPE_4__* %7, %struct.TYPE_4__** %5, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @SPI_FLASH_MMAP_DATA, align 4
  %13 = call i32 @esp_partition_mmap(%struct.TYPE_4__* %8, i32 0, i32 %11, i32 %12, i8** %4, i32* %3)
  %14 = load i32, i32* %2, align 4
  %15 = load i8*, i8** %4, align 8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @esp_mqtt_client_publish(i32 %14, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8* %15, i32 %18, i32 0, i32 0)
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* @TAG, align 4
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @ESP_LOGI(i32 %20, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i32 %21)
  ret void
}

declare dso_local %struct.TYPE_4__* @esp_ota_get_running_partition(...) #1

declare dso_local i32 @esp_partition_mmap(%struct.TYPE_4__*, i32, i32, i32, i8**, i32*) #1

declare dso_local i32 @esp_mqtt_client_publish(i32, i8*, i8*, i32, i32, i32) #1

declare dso_local i32 @ESP_LOGI(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
